fix error message styling on mobile (#583)
* fix error message styling on mobile

* more update

--- a/src/pages/_error.module.scss
+++ b/src/pages/_error.module.scss
@@ -5,11 +5,15 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
+  padding: 0 var(--spacing-small);
+  box-sizing: border-box;
 }
 
 .title {
   font-size: var(--font-size-jumbo);
   margin-bottom: var(--spacing-medium);
+  text-align: center;
+  line-height: normal;
 }
 
 .goBack {
